--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -3,7 +3,7 @@
   .form__items
     .form-item
       .row
-        .col-md-6.col-xs-12
+        .col-lg-9.col-xs-12
           .form-item
             = f.label :practice, class: 'a-label'
 
