--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -24,10 +24,14 @@ body
   max-width: 100%
   padding-left: 7rem
   padding-right: 15.5rem
+  +media-breakpoint-down(md)
+    +padding(horizontal, 6rem 1rem)
   +media-breakpoint-down(sm)
     +padding(horizontal, 1rem)
   &.has-no-right-padding
     padding-right: 14rem
+    +media-breakpoint-down(md)
+    +padding(horizontal, 6rem 1rem)
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
   body.no-global-nav &
