--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,4 +1,4 @@
-.col-md-3.col-xs-12
+.col-xl-3.col-lg-4.col-md-6.col-xs-12
   .users-item(class="#{user.active? ? 'active' : 'inactive'}")
     .users-item__inner
       header.users-item__header
