--- a/app/views/reports/_report_check_form.html.slim
+++ b/app/views/reports/_report_check_form.html.slim
@@ -1,3 +1,3 @@
-= form_for ([@report, @check]), html: { class: "report-check-form" } do |f|
+= form_for [@report, @check], html: { class: "report-check-form" } do |f|
   = hidden_field_tag :user_id, current_user.id
   = f.submit t('check_report'), class: 'report-check-form__action is-button-standard-sm-danger'
