--- a/app/views/reports/_report_comment_form.slim
+++ b/app/views/reports/_report_comment_form.slim
@@ -1,7 +1,7 @@
 .thread-comment-form
   .thread-comment__author
     = gravatar_tag current_user, secure: true, size: 200, html: { class: "thread-comment__author-icon" }
-  = form_for ([@report, @comment]), html: { class: 'thread-comment-form__form' } do |f|
+  = form_for [@report, @comment], html: { class: 'thread-comment-form__form' } do |f|
     .form-items
       .form-item
         = f.text_area :description, required: true, class: 'a-textarea thread-comment-form__textarea js-markdown'
