--- a/app/views/pages/new.html.slim
+++ b/app/views/pages/new.html.slim
@@ -5,4 +5,4 @@ header.page-header
       h1.page-header__title= title
 .page-body
   .container
-    = render "form", page: @page, method: "POST", url: "/pages"
+    = render "form", page: @page
