--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,7 +1,8 @@
+- title "提出物"
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title 提出物
+      h1.page-header__title= title
 .page-body
   .container
     = render "product", product: @product
