タブ部分のビューを修正

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -46,3 +46,11 @@
 @import bootstrap/close
 @import bootstrap/modal
 @import settings/custom-bootstrap/**/*
+
+
+//　追記
+ul.practice-nav li
+  display: inline
+
+li.is_active a
+  background: rgba(black, .6)
