--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -59,14 +59,15 @@
               li.thread__actions-item
                 = link_to report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread__actions-item-link is-danger' do
                   i.fa.fa-trash-o
-
-        = link_to '前', report_path(@report.previous_report)
-
         = link_to reports_path, class: 'is-button-standard-sm-secondary' do
           i.fa.fa-angle-left
           = t('to_index_of_reports')
 
-        = link_to '次', report_path(@report.next_report)
+        - if report.previous != nil
+          = link_to '前', report_path(report.previous.id)
 
+
+        - if report.next != nil
+          = link_to '次', report_path(report.next.id)
   = link_to report.user, itempro: "url", class: "thread__author-link" do
     = gravatar_tag report.user, secure: true, size: 120, html: { class: "thread__author-icon" }
