タブにデザイン

--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -11,7 +11,7 @@ body
   .modal-open
     overflow: hidden
   &.welcome
-    background-color: $base-color
+    background-color: $base
   &.has-background
     background-image: image_url('main-visual.jpg')
     background-size: cover
