--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -9,7 +9,7 @@
   +media-breakpoint-down(sm)
     font-size: 1rem
   &:focus
-    background-color: $base-color
+    background-color: $base
     box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset
 
 .a-label
@@ -26,7 +26,7 @@
   +media-breakpoint-down(sm)
     font-size: 1rem
   &:focus
-    background-color: $base-color
+    background-color: $base
     box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset
 
 .a-sm-text-input
@@ -43,7 +43,7 @@
     border-color: #e1a7b6
     background-color: #fefafb
   &:focus
-    background-color: $base-color
+    background-color: $base
     border-color: #c4c7bf
     box-shadow: rgba(black, .1) 0 1px 2px inset
 
@@ -71,6 +71,6 @@ textarea.a-sm-text-input
   +media-breakpoint-down(sm)
     font-size: 1rem
   &:focus
-    background-color: $base-color
+    background-color: $base
     border-color: #c4c7bf
     box-shadow: rgba(black, .1) 0 1px 2px inset
