--- a/app/assets/stylesheets/blocks/admin/_admin-categories.sass
+++ b/app/assets/stylesheets/blocks/admin/_admin-categories.sass
@@ -25,7 +25,7 @@
   white-space: nowrap
 
 .admin-table__item
-  background-color: $base-color
+  background-color: $base
   &:last-child
     +border-radius(bottom, .25rem)
 .admin-table__item-value
@@ -35,7 +35,7 @@
 
 .admin-table-item__body
   border-radius: .25rem
-  background-color: $base-color
+  background-color: $base
   box-shadow: rgba(black, .2) 0 1px 4px
   overflow: hidden
 
