--- a/app/assets/stylesheets/blocks/auth-form/_auth-form-radio-button.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form-radio-button.sass
@@ -35,7 +35,7 @@
     +position(absolute, left .75rem, top 50%)
     margin-top: -.4375rem
     box-shadow: rgba(black, .1) 0 1px 2px inset
-    background-color: $base-color
+    background-color: $base
   &.is-checked
     background-color: #fffadd
     border-color: #d9c02a
@@ -71,7 +71,7 @@
     +position(absolute, left .75rem, top 50%)
     margin-top: -.4375rem
     box-shadow: rgba(black, .1) 0 1px 2px inset
-    background-color: $base-color
+    background-color: $base
   &.is-checked
     background-color: #fffadd
     border-color: #d9c02a
