--- a/app/assets/stylesheets/blocks/header/_header-drop-down.sass
+++ b/app/assets/stylesheets/blocks/header/_header-drop-down.sass
@@ -13,7 +13,7 @@
 .header-drop-down__items
   border: solid 1px #ccc
   box-shadow: rgba(black, .1) 0 .0625rem .0625rem
-  background-color: $base-color
+  background-color: $base
   border-radius: .45rem
   +position(relative, 2)
   +media-breakpoint-down(sm)
@@ -38,7 +38,7 @@
     border-style: solid
     border-width: 10px 10px
     border-color: transparent
-    border-bottom-color: $base-color
+    border-bottom-color: $base
     +position(absolute, left 50%, top -18px)
     margin-left: -10px
     +media-breakpoint-down(sm)
