--- a/app/assets/stylesheets/blocks/practice/_categories.sass
+++ b/app/assets/stylesheets/blocks/practice/_categories.sass
@@ -43,7 +43,7 @@
 
 .categories-item__body
   border-radius: .25rem
-  background-color: $base-color
+  background-color: $base
   box-shadow: rgba(black, .2) 0 1px 4px
   overflow: hidden
 .categories-item__description
