--- a/app/assets/stylesheets/blocks/report/_select-practices.sass
+++ b/app/assets/stylesheets/blocks/report/_select-practices.sass
@@ -17,7 +17,7 @@
     border-bottom: none
   &:hover
     color: $default-text
-    background-color: $base-color
+    background-color: $base
   &.is-checked
     color: $default-text
     background-color: #fff4d5
