--- a/app/assets/stylesheets/blocks/shared/_page-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_page-nav.sass
@@ -1,6 +1,6 @@
 .page-nav
   +position(absolute, right 0, top 0)
-  background-color: $base-color
+  background-color: $base
   width: 12rem
   border: solid 1px #dadada
   border-radius: .25rem
