--- a/app/assets/stylesheets/blocks/thread/_thread-comment-form.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-comment-form.sass
@@ -18,11 +18,11 @@ $thread-header-author: 4.75rem
   border-radius: 50%
 
 .thread-comment-form__form
-  background-color: $base-color
+  background-color: $base
   padding: 1rem
   border-radius: .25rem
   +relative
-  +balloon-tail(left $base-color .75rem 1rem, false, top 1.5rem)
+  +balloon-tail(left $base .75rem 1rem, false, top 1.5rem)
   +media-breakpoint-down(sm)
     &::before,
     &::after
