--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -13,12 +13,12 @@ $thread-header-author: 6rem
       max-width: 47rem
 
 .thread__inner
-  background-color: $base-color
+  background-color: $base
   border-radius: .25rem
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
   margin-bottom: 2rem
   +position(relative)
-  +balloon-tail(left $base-color .625rem .75rem, false, top 2rem)
+  +balloon-tail(left $base .625rem .75rem, false, top 2rem)
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
     &::before,
