--- a/app/assets/stylesheets/blocks/thread/_threads.sass
+++ b/app/assets/stylesheets/blocks/thread/_threads.sass
@@ -1,5 +1,5 @@
 .thread-list
-  background-color: $base-color
+  background-color: $base
   border-radius: .25rem
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
   max-width: 62.5rem
