--- a/app/assets/stylesheets/welcome/_welcome-child-section.sass
+++ b/app/assets/stylesheets/welcome/_welcome-child-section.sass
@@ -32,7 +32,7 @@
       font-size: .875rem
   table
     width: 100%
-    background-color: $base-color
+    background-color: $base
     border: solid 2px #515556
     border-radius: .25rem
   tr
