--- a/app/assets/stylesheets/welcome/_welcome-member.sass
+++ b/app/assets/stylesheets/welcome/_welcome-member.sass
@@ -3,7 +3,7 @@
   +margin(horizontal, auto)
 
 .welcome-member
-  background-color: rgba($base-color, .8)
+  background-color: rgba($base, .8)
   border: solid 2px #515556
   padding: 1.25rem 1.5rem 1.5rem
   border-radius: .25rem
