--- a/app/assets/stylesheets/welcome/_welcome-side-image-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-side-image-sections.sass
@@ -1,5 +1,5 @@
 .welcome-side-image-sections
-  background-color: $base-color
+  background-color: $base
   border: solid 2px #515556
   border-radius: .5rem
   height: 100%
