--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
@@ -29,7 +29,7 @@
     border-color: #ec829d
     background-color: #fefafb
   &:focus
-    background-color: $base-color
+    background-color: $base
     box-shadow: rgba(black, .1) 0 1px 2px inset
     border-style: solid
 
@@ -65,7 +65,7 @@ textarea.auth-form-item__text-input
 
 .auth-form-item__pp
   border: solid 1px #515556
-  background-color: rgba($base-color, .8)
+  background-color: rgba($base, .8)
   border-radius: .25rem
   overflow: auto
   max-height: 7rem
