--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form-radio-button.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form-radio-button.sass
@@ -19,7 +19,7 @@
   +text-block(.875rem 1.45, block)
   border: dashed 1px #515556
   padding: .625rem .625rem .625rem 2rem
-  background-color: rgba($base-color, .6)
+  background-color: rgba($base, .6)
   cursor: pointer
   border-radius: .25rem
   margin-bottom: .5rem
@@ -36,7 +36,7 @@
     +position(absolute, left .75rem, top 50%)
     margin-top: -.4375rem
     box-shadow: rgba(black, .1) 0 1px 1px inset
-    background-color: $base-color
+    background-color: $base
   &.is-checked
     background-color: #f4e90f
     border: solid 1px #515556
@@ -58,7 +58,7 @@
   +text-block(.875rem 1.45, block)
   border: dashed 1px #515556
   padding: .625rem .625rem .625rem 2rem
-  background-color: rgba($base-color, .6)
+  background-color: rgba($base, .6)
   cursor: pointer
   border-radius: .25rem
   margin-bottom: .5rem
@@ -73,7 +73,7 @@
     +position(absolute, left .75rem, top 50%)
     margin-top: -.4375rem
     box-shadow: rgba(black, .1) 0 1px 1px inset
-    background-color: $base-color
+    background-color: $base
   &.is-checked
     background-color: #fffadd
     border-color: #d9c02a
