--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form.sass
@@ -1,7 +1,7 @@
 .auth-form
   +margin(vertical, 2rem)
   max-width: 40rem
-  background: rgba($base-color, .8)
+  background: rgba($base, .8)
   padding: 2rem
   border: solid 2px #515556
   border-radius: .25rem
