--- a/app/assets/stylesheets/blocks/auth-form/_auth-form.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form.sass
@@ -11,7 +11,7 @@
 .auth-form
   +margin(vertical, 2rem 4rem)
   max-width: 22rem
-  background-color: $base-color
+  background-color: $base
   +margin(horizontal, auto)
   border-radius: .375rem
   +media-breakpoint-down(sm)
