--- a/app/assets/stylesheets/blocks/entry/_entry.sass
+++ b/app/assets/stylesheets/blocks/entry/_entry.sass
@@ -2,7 +2,7 @@
   max-width: 42.5rem
   +margin(horizontal, auto)
   margin-bottom: 3rem
-  background-color: $base-color
+  background-color: $base
   border-radius: .25rem
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
 
