--- a/app/assets/stylesheets/blocks/form/_markdown-form.sass
+++ b/app/assets/stylesheets/blocks/form/_markdown-form.sass
@@ -4,7 +4,7 @@
     margin-bottom: 1rem
 
 .markdown-form__preview
-  background-color: $base-color
+  background-color: $base
   padding: 1rem
   +text-block(.875rem 1.8 1.4em)
   border-radius: .25rem
