--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -1,6 +1,6 @@
 $header-height: 3.125rem
 .header
-  background-color: $base-color
+  background-color: $base
   +position(relative, 1)
   +media-breakpoint-down(md)
     border-bottom: solid $background-color .0625rem
