--- a/app/assets/stylesheets/blocks/page/_page-header.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header.sass
@@ -1,7 +1,7 @@
 .page-header
-  background-color: $base-color
-  margin-bottom: 1.5rem
+  background-color: $base
   box-shadow: rgba(black, .2) 0 .0625rem .0625rem
+  margin-bottom: 1.5rem
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
   &.has-border-bottom-none
