--- a/app/assets/stylesheets/blocks/static-pages/_thanks.sass
+++ b/app/assets/stylesheets/blocks/static-pages/_thanks.sass
@@ -11,7 +11,7 @@
   margin-bottom: 3rem
 
 .thanks__body
-  background-color: $base-color
+  background-color: $base
   padding: 1.5rem
   border-radius: .25rem
 
