--- a/app/assets/stylesheets/blocks/user/_active-practices.sass
+++ b/app/assets/stylesheets/blocks/user/_active-practices.sass
@@ -1,6 +1,6 @@
 .active-practices
   padding: 1rem
-  background-color: $base-color
+  background-color: $base
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
   border-radius: .25rem
   margin-bottom: 1rem
