--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -18,7 +18,7 @@
 
 .user-data
   padding: 1rem
-  background-color: $base-color
+  background-color: $base
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
   border-radius: .25rem
   margin-bottom: 1rem
