--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,6 +1,7 @@
 $main-color: #2c2461
 $accent-color: #ffbe0a
-$base-color: white
+$base: white
+$base-color: $base
 $background-color: #e6e6e6
 $background-color-shade: #cbcbcb
 
