--- a/app/assets/stylesheets/welcome/_welcome-small-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-small-sections.sass
@@ -11,7 +11,7 @@
     padding: 3rem 1.5rem 1rem
     margin-top: 3.5rem
     +position(relative)
-    background-color: rgba($base-color, .8)
+    background-color: rgba($base, .8)
   .welcome-section.is-process &
     margin-bottom: 0
     height: auto
@@ -77,7 +77,7 @@
       +padding(horizontal, .5rem)
 
 .welcome-small-section__inner
-  background-color: rgba($base-color, .8)
+  background-color: rgba($base, .8)
   padding: 1.25rem 1.5rem 1.5rem
   border-radius: .25rem
   height: 100%
