--- a/app/views/practices/reports/show.html.slim
+++ b/app/views/practices/reports/show.html.slim
@@ -5,19 +5,11 @@ header.page-header
       h2.page-header__title
         = @practice.title
       .page-header__action
-        ul.practice-nav
-          li
-            = link_to practice_path(@practice), class: 'is-button-standard-md-secondary' do
-              i.fa.fa-angle-left
-              = t('内容')
-          li.is_active
-            = link_to practice_reports_path(@practice), class: 'is-button-standard-md-secondary' do
-              i.fa.fa-angle-left
-              = t('このプラクティスに関する日報')
-          li
-            = link_to practices_path, class: 'is-button-standard-md-secondary' do
-              i.fa.fa-angle-left
-              = t('practices')
+        = link_to practices_path, class: 'is-button-standard-md-secondary' do
+          i.fa.fa-angle-left
+          = t('practices')
+
+= render "practices/practice_page_tabs", current: 2
 
 .container
   .col-md-6.col-xs-12
