--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -1,18 +1,18 @@
-- content_for(:page_classes, 'welcome no-header no-recent-reports no-global-nav welcome-home')
-- content_for(:head_last) do
+- content_for :page_classes, "welcome no-header no-recent-reports no-global-nav welcome-home"
+- content_for :head_last do
   = javascript_include_tag "https://sdk.form.run/js/v2/formrun.js"
 
-= render('welcome_header')
-= render('main_visual')
-= render('welcome_global_nav')
+= render "welcome_header"
+= render "main_visual"
+= render "welcome_global_nav"
 .welcome-sections
-  = render('about')
-  = render('tutorials')
-  = render('eligibility')
-  = render('process')
-  = render('finding_employment')
-  = render('administrator')
-  = render('other')
-  = render('faq')
-  = render('form')
-= render('welcome_footer')
+  = render "about"
+  = render "tutorials"
+  = render "eligibility"
+  = render "process"
+  = render "finding_employment"
+  = render "administrator"
+  = render "other"
+  = render "faq"
+  = render "form"
+= render "welcome_footer"
