--- a/app/assets/stylesheets/welcome/_welcome.sass
+++ b/app/assets/stylesheets/welcome/_welcome.sass
@@ -19,30 +19,33 @@ body.home-welcome
     margin-top: 0
   &.is-about
     background-color: #f4e90f
-    +position(10)
+    +position(11)
   &.is-tutorials
     background-color: #4d9401
     background-image: image_url('green-texture.png')
     background-size: 12rem
     background-repeat: repeat
     background-position: center center
-    +position(9)
+    +position(10)
   &.is-eligibility
     background-color: #f8d9a6
     background-image: image_url('wood.png')
     background-size: 15rem
     background-repeat: repeat
     background-position: center center
-    +position(8)
+    +position(9)
   &.is-process
     background-color: #f8d9a6
     background-image: image_url('space.jpg')
     background-size: cover
     background-repeat: no-repeat
     background-position: center center
-    +position(7)
+    +position(8)
   &.is-finding-employment
     background-color: #f4e90f
+    +position(7)
+  &.is-company-logos
+    background-color: #ffffff
     +position(6)
   &.is-administrator
     background-color: #2d446e
