--- a/app/views/home/_finding_employment.slim
+++ b/app/views/home/_finding_employment.slim
@@ -55,17 +55,4 @@ section.welcome-section.is-finding-employment#finding-employment
                     | その会社でしか使えない、潰しの効かないエンジニアになるのを避けることができます。
 
 
-    section.welcome-child-section
-      h3.welcome-child-section__title
-        | 紹介企業
-      .company-logos
-        p.is-text-align-center
-          | ここに素敵な企業のロゴが並ぶ予定です。
-        //
-          ul.company-logos__items
-            li.company-logos__item
-              = link_to "http://agile.esm.co.jp/", class: "company-logos__item-link", target: "_blank" do
-                = image_tag("company-logos/esm.png", class: "company-logos__item-image")
-            li.company-logos__item
-              = link_to "https://corporate.uridoki.net/", class: "company-logos__item-link", target: "_blank" do
-                = image_tag("company-logos/uridokinet.png", class: "company-logos__item-image")
+= render "company_logos"
