--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -3,12 +3,12 @@
   .auth-form-items
     .auth-form-item
       = f.label :login_name, class: 'a-sm-label is-required'
-      = f.text_field :login_name, class: 'a-sm-text-input', autocomplete: :off
+      = f.text_field :login_name, class: 'a-sm-text-input', autocomplete: :off, placeholder: "komagata"
       .auth-form-item__help
         p= t('login_name_description')
     .auth-form-item
       = f.label :email, class: 'a-sm-label is-required'
-      = f.text_field :email, class: 'a-sm-text-input'
+      = f.text_field :email, class: 'a-sm-text-input', placeholder: "komagata@fjord.jp"
       .auth-form-item__help
         p= t('email_description')
     .auth-form-item
@@ -16,29 +16,39 @@
         .col-xs-6
           .auth-form-item
             = f.label :last_name, class: 'a-sm-label is-required'
-            = f.text_field :last_name, class: 'a-sm-text-input'
+            = f.text_field :last_name, class: 'a-sm-text-input', placeholder: "駒形"
         .col-xs-6
           .auth-form-item
             = f.label :first_name, class: 'a-sm-label is-required'
-            = f.text_field :first_name, class: 'a-sm-text-input'
+            = f.text_field :first_name, class: 'a-sm-text-input', placeholder: "真幸"
     .auth-form-item
       = f.label :description, class: 'a-sm-label'
-      = f.text_area :description, class: 'a-sm-text-input', size: '10x10'
+      = f.text_area :description, class: 'a-sm-text-input', size: '10x10', placeholder: "月・水・金の 10:00 〜 19:00 に活動します。"
     .auth-form-item
       = f.label :github_account, class: 'a-sm-label'
-      = f.text_field :github_account, class: 'a-sm-text-input'
+      = f.text_field :github_account, class: 'a-sm-text-input', placeholder: "komagata"
+      .auth-form-item__help
+        p URL ではなく ID を入力。
     .auth-form-item
       = f.label :twitter_url, class: 'a-sm-label'
-      = f.text_field :twitter_url, class: 'a-sm-text-input'
+      = f.text_field :twitter_url, class: 'a-sm-text-input', placeholder: "https://twitter.com/komagata"
+      .auth-form-item__help
+        p ID ではなく URL を入力。
     .auth-form-item
       = f.label :facebook_url, class: 'a-sm-label'
-      = f.text_field :facebook_url, class: 'a-sm-text-input'
+      = f.text_field :facebook_url, class: 'a-sm-text-input', placeholder: "https://www.facebook.com/komagata1111"
+      .auth-form-item__help
+        p ID ではなく URL を入力。
     .auth-form-item
       = f.label :blog_url, class: 'a-sm-label'
-      = f.text_field :blog_url, class: 'a-sm-text-input'
+      = f.text_field :blog_url, class: 'a-sm-text-input', placeholder: "http://docs.komagata.org/"
+      .auth-form-item__help
+        p URL を入力。
     .auth-form-item
       = f.label :feed_url, class: 'a-sm-label'
-      = f.text_field :feed_url, class: 'a-sm-text-input'
+      = f.text_field :feed_url, class: 'a-sm-text-input', placeholder: "http://docs.komagata.org/index.atom"
+      .auth-form-item__help
+        p URL を入力。
     .auth-form-item
       = f.label :password, class: 'a-sm-label is-required'
       = f.password_field :password, class: 'a-sm-text-input', autocomplete: :off
