Wikiページにページネーションを追加
1ページ20件表示できる
Wikiページ表示時にページネーションが存在することを確認する

--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -10,6 +10,8 @@ header.page-header
           | 新規ページ
 .page-body
   .container
+    = paginate @pages, position: "top"
     .thread-list
       - @pages.each do |page|
         = render 'page_list_item', page: page
+    = paginate @pages, position: "bottom"
