--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -30,10 +30,10 @@
       .auth-form-item__help
         p URL ではなく ID を入力。
     .auth-form-item
-      = f.label :twitter_url, class: 'a-sm-label'
-      = f.text_field :twitter_url, class: 'a-sm-text-input', placeholder: "https://twitter.com/komagata"
+      = f.label :twitter_account, class: 'a-sm-label'
+      = f.text_field :twitter_account, class: 'a-sm-text-input', placeholder: "komagata"
       .auth-form-item__help
-        p ID ではなく URL を入力。
+        p URL ではなく アカウント を入力。
     .auth-form-item
       = f.label :facebook_url, class: 'a-sm-label'
       = f.text_field :facebook_url, class: 'a-sm-text-input', placeholder: "https://www.facebook.com/komagata1111"
