--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -31,8 +31,8 @@
       = f.label :slack_account, class: 'a-sm-label'
       = f.text_field :slack_account, class: 'a-sm-text-input'
     .auth-form-item
-      = f.label :twitter_url, class: 'a-sm-label'
-      = f.text_field :twitter_url, class: 'a-sm-text-input'
+      = f.label :twitter_account, class: 'a-sm-label'
+      = f.text_field :twitter_account, class: 'a-sm-text-input'
     .auth-form-item
       = f.label :facebook_url, class: 'a-sm-label'
       = f.text_field :facebook_url, class: 'a-sm-text-input'
