現在選択されているタブの判定にrequest.fullpathを使うようにした

--- a/app/views/practices/reports/show.html.slim
+++ b/app/views/practices/reports/show.html.slim
@@ -9,7 +9,7 @@ header.page-header
           i.fa.fa-angle-left
           = t('practices')
 
-= render "practices/practice_page_tabs", current: 2
+= render "practices/page_tabs"
 
 .container
   .col-md-6.col-xs-12
