--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -9,7 +9,7 @@ header.page-header
           i.fa.fa-angle-left
           = t('practices')
 
-= render "practices/practice_page_tabs", current: 1
+= render "practices/page_tabs"
 
 .container
   .row.is-gutter-width-32
