--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -23,13 +23,13 @@ header.page-header
           = render "users/completed_practices", user: @user
 
         .col-md-6.col-xs-12
-          - if @products.any?
+          - if @products.present?
             .user-reports
               h2.user-reports__title 提出物
               .user-reports__items
                 = render partial: "users/product", collection: @products, as: :product
 
-          - if @reports.any?
+          - if @reports.present?
             .user-reports
               h2.user-reports__title 日報
               = render "users/reports", reports: @reports
