--- a/app/views/practices/products/show.html.slim
+++ b/app/views/practices/products/show.html.slim
@@ -13,5 +13,5 @@ header.page-header
 
 .container
   .col-md-6.col-xs-12
-    - if admin_login?
+    - if admin_login? || Product.find_by(user_id: current_user.id, practice_id: @practice.id).checks.any?
       = render 'products', products: @practice.products.eager_load(:user, :comments).order(updated_at: :desc)
